<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/escolha_o_seu_layout"
        android:gravity="center_horizontal"
        android:layout_margin="10dp"/>

    <LinearLayout
        style="@style/AgrupadorBotoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        style="@style/FIAPButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/abrir_linearlayout"
        android:textAlignment="center"
        android:onClick="abrirLinearLayout"/>

    <Button
        style="@style/FIAPButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/abrir_relativelayout"
        android:textAlignment="center"
        android:onClick="abrirRelativeLayout"/>

    </LinearLayout>

    <LinearLayout
        style="@style/AgrupadorBotoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@style/FIAPButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/abrir_absolutelayout"
            android:textAlignment="center"
            android:onClick="abrirAbsoluteLayout"/>

        <Button
            style="@style/FIAPButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/abrir_framelayout"
            android:textAlignment="center"
            android:onClick="abrirFrameActivity"/>

    </LinearLayout>



</LinearLayout>